--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.initialize=true
 spring.datasource.schema=classpath:/schema.sql
 spring.datasource.continue-on-error=true
 spring.jackson.serialization.fail-on-empty-beans=false
+springdoc.swagger-ui.path=/swagger-ui.html
+spring.redis.host=redis
+spring.redis.port=6379
+myapp.redis-ttl-in-millis=60000
