added security and jacoco

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/users_db
 spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.datasource.initialization-mode=always
@@ -12,3 +12,5 @@ springdoc.swagger-ui.path=/swagger-ui.html
 spring.redis.host=redis
 spring.redis.port=6379
 myapp.redis-ttl-in-millis=60000
+spring.security.user.name = marco
+spring.security.user.password = marco
